# log-scraper

./: .gitignore  Cargo.toml  Makefile  README.md  create_table-omnisci_log_rust.sql
.github/workflows/: integration-test-workflow.yml
docker/: Dockerfile  buildbinary.sh
filebeat/: docker-compose.yml  filebeat.yml
python/: README.md  omnisci_log_scraper.py
src/: kafka.rs  lib.rs  main.rs
src/log_parser/: lineparser.rs  mod.rs
tests/: integration_tests.rs  omnisci_server.INFO  test_lines.rs  test_load.rs  test_load_db.py  test_load_db.sh  work_to_generate_log.py
tests/gold/: copy_to_omnisci_log_rust.csv  copy_to_omnisci_log_scraper.csv  omnisci_server.INFO  omnisci_server.INFO-sqlquery.sql  omnisci_server.INFO.csv  omnisci_server.INFO.sql  omnisci_server.INFO.terminal.txt
