[package]
name = "omnisci-log-scraper"
version = "0.1.0"
edition = "2018"
authors = ["Alex Baden <alex.baden@mapd.com>",
           "Mike Hinchey <mike.hinchey@omnisci.com>"]
description = "Scrapes OmniSci DB logs for useful data"
license = "Apache-2.0"
# license-file = "LICENSE.md"
homepage = "https://omnisci.com/"
keywords = ["omnisci", "sql", "db", "database", "gpu", "log"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/omnisci/log-scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
csv = "1"
clap = "2"
serde_json = "1"
pager = "0.15"
colored = "1"
serde = { version = "1.0", features = ["derive"] }
omnisci = { git = "https://github.com/mikehinchey/omnisci-rs", branch = "mikehinchey/api1" }
lazy_static = "1"
