[package]
name = "omnisci-log-scraper"
version = "0.2.0"
edition = "2018"
authors = ["Alex Baden <alex.baden@mapd.com>",
           "Mike Hinchey <mike.hinchey@omnisci.com>"]
description = "Scrapes OmniSci DB logs for useful data"
license = "Apache-2.0"
# license-file = "LICENSE.md"
homepage = "https://omnisci.com/"
keywords = ["omnisci", "sql", "db", "database", "gpu", "log"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/omnisci/log-scraper"

[dependencies]
chrono = "0.4"
regex = "1"
csv = "1"
clap = "2"
serde_json = "1"
pager = "0.15"
colored = "1"
serde = { version = "1.0", features = ["derive"] }
omnisci = { git = "https://github.com/omnisci/omnisci-rs", branch = "mikehinchey/564" }
lazy_static = "1"
